src/main/gen/net/internetisalie/lunar/luacats/lang/parser/LuaCatsParser.java
// This is a generated file. Not intended for manual editing.
package net.internetisalie.lunar.luacats.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static net.internetisalie.lunar.luacats.lang.psi.LuaCatsElementTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class LuaCatsParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return root(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // <<child>>
  public static boolean ArgKeyword(PsiBuilder builder_, int level_, Parser child) {
    if (!recursion_guard_(builder_, level_, "ArgKeyword")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = child.parse(builder_, level_);
    exit_section_(builder_, marker_, ARG_KEYWORD, result_);
    return result_;
  }

  /* ********************************************************** */
  // <<child>>
  public static boolean ArgName(PsiBuilder builder_, int level_, Parser child) {
    if (!recursion_guard_(builder_, level_, "ArgName")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = child.parse(builder_, level_);
    exit_section_(builder_, marker_, ARG_NAME, result_);
    return result_;
  }

  /* ********************************************************** */
  // <<child>>
  public static boolean ArgSymbol(PsiBuilder builder_, int level_, Parser child) {
    if (!recursion_guard_(builder_, level_, "ArgSymbol")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = child.parse(builder_, level_);
    exit_section_(builder_, marker_, ARG_SYMBOL, result_);
    return result_;
  }

  /* ********************************************************** */
  // <<child>>
  public static boolean ArgType(PsiBuilder builder_, int level_, Parser child) {
    if (!recursion_guard_(builder_, level_, "ArgType")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = child.parse(builder_, level_);
    exit_section_(builder_, marker_, ARG_TYPE, result_);
    return result_;
  }

  /* ********************************************************** */
  // <<child>>
  public static boolean ArgValue(PsiBuilder builder_, int level_, Parser child) {
    if (!recursion_guard_(builder_, level_, "ArgValue")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = child.parse(builder_, level_);
    exit_section_(builder_, marker_, ARG_VALUE, result_);
    return result_;
  }

  /* ********************************************************** */
  // '+' | '-'
  public static boolean addOrSubtract(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "addOrSubtract")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ADD_OR_SUBTRACT, "<add or subtract>");
    result_ = consumeToken(builder_, "+");
    if (!result_) result_ = consumeToken(builder_, "-");
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // '@alias' <<ArgName NAME>> <<ArgType type>>? description?
  public static boolean aliasTag(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "aliasTag")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ALIAS_TAG, "<alias tag>");
    result_ = consumeToken(builder_, "@alias");
    result_ = result_ && ArgName(builder_, level_ + 1, NAME_parser_);
    result_ = result_ && aliasTag_2(builder_, level_ + 1);
    result_ = result_ && aliasTag_3(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // <<ArgType type>>?
  private static boolean aliasTag_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "aliasTag_2")) return false;
    ArgType(builder_, level_ + 1, LuaCatsParser::type);
    return true;
  }

  // description?
  private static boolean aliasTag_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "aliasTag_3")) return false;
    description(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // aliasTag
  //     | asyncTag
  //     | castTag
  //     | classTag
  //     | deprecatedTag
  //     | diagnosticTag
  //     | enumTag
  //     | fieldTag
  //     | genericTag
  //     | metaTag
  //     | moduleTag
  //     | nodiscardTag
  //     | operatorTag
  //     | overloadTag
  //     | packageTag
  //     | paramTag
  //     | ldocParamTag
  //     | privateTag
  //     | protectedTag
  //     | returnTag
  //     | seeTag
  //     | sourceTag
  //     | typeTag
  //     | varargTag
  //     | versionTag
  static boolean anyTag(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anyTag")) return false;
    boolean result_;
    result_ = aliasTag(builder_, level_ + 1);
    if (!result_) result_ = asyncTag(builder_, level_ + 1);
    if (!result_) result_ = castTag(builder_, level_ + 1);
    if (!result_) result_ = classTag(builder_, level_ + 1);
    if (!result_) result_ = deprecatedTag(builder_, level_ + 1);
    if (!result_) result_ = diagnosticTag(builder_, level_ + 1);
    if (!result_) result_ = enumTag(builder_, level_ + 1);
    if (!result_) result_ = fieldTag(builder_, level_ + 1);
    if (!result_) result_ = genericTag(builder_, level_ + 1);
    if (!result_) result_ = metaTag(builder_, level_ + 1);
    if (!result_) result_ = moduleTag(builder_, level_ + 1);
    if (!result_) result_ = nodiscardTag(builder_, level_ + 1);
    if (!result_) result_ = operatorTag(builder_, level_ + 1);
    if (!result_) result_ = overloadTag(builder_, level_ + 1);
    if (!result_) result_ = packageTag(builder_, level_ + 1);
    if (!result_) result_ = paramTag(builder_, level_ + 1);
    if (!result_) result_ = ldocParamTag(builder_, level_ + 1);
    if (!result_) result_ = privateTag(builder_, level_ + 1);
    if (!result_) result_ = protectedTag(builder_, level_ + 1);
    if (!result_) result_ = returnTag(builder_, level_ + 1);
    if (!result_) result_ = seeTag(builder_, level_ + 1);
    if (!result_) result_ = sourceTag(builder_, level_ + 1);
    if (!result_) result_ = typeTag(builder_, level_ + 1);
    if (!result_) result_ = varargTag(builder_, level_ + 1);
    if (!result_) result_ = versionTag(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // NAME
  static boolean argumentName(PsiBuilder builder_, int level_) {
    return consumeToken(builder_, NAME);
  }

  /* ********************************************************** */
  // distinctType '[]'?
  public static boolean arrayType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arrayType")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ARRAY_TYPE, "<array type>");
    result_ = distinctType(builder_, level_ + 1);
    result_ = result_ && arrayType_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // '[]'?
  private static boolean arrayType_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arrayType_1")) return false;
    consumeToken(builder_, "[]");
    return true;
  }

  /* ********************************************************** */
  // '@async' description?
  public static boolean asyncTag(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "asyncTag")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ASYNC_TAG, "<async tag>");
    result_ = consumeToken(builder_, "@async");
    result_ = result_ && asyncTag_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // description?
  private static boolean asyncTag_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "asyncTag_1")) return false;
    description(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // 'nil' | 'any' | 'boolean' | 'string' | 'number' | 'integer' | 'function' | 'table' | 'thread' | 'userdata' | 'lightuserdata'
  public static boolean builtinType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "builtinType")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BUILTIN_TYPE, "<builtin type>");
    result_ = consumeToken(builder_, "nil");
    if (!result_) result_ = consumeToken(builder_, "any");
    if (!result_) result_ = consumeToken(builder_, "boolean");
    if (!result_) result_ = consumeToken(builder_, "string");
    if (!result_) result_ = consumeToken(builder_, "number");
    if (!result_) result_ = consumeToken(builder_, "integer");
    if (!result_) result_ = consumeToken(builder_, "function");
    if (!result_) result_ = consumeToken(builder_, "table");
    if (!result_) result_ = consumeToken(builder_, "thread");
    if (!result_) result_ = consumeToken(builder_, "userdata");
    if (!result_) result_ = consumeToken(builder_, "lightuserdata");
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // addOrSubtract? type
  public static boolean castModifier(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "castModifier")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CAST_MODIFIER, "<cast modifier>");
    result_ = castModifier_0(builder_, level_ + 1);
    result_ = result_ && type(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // addOrSubtract?
  private static boolean castModifier_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "castModifier_0")) return false;
    addOrSubtract(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // NAME
  static boolean castName(PsiBuilder builder_, int level_) {
    return consumeToken(builder_, NAME);
  }

  /* ********************************************************** */
  // '@cast' <<ArgName castName>> <<ArgType castModifier>> { ',' <<ArgType castModifier>> }* description?
  public static boolean castTag(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "castTag")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CAST_TAG, "<cast tag>");
    result_ = consumeToken(builder_, "@cast");
    result_ = result_ && ArgName(builder_, level_ + 1, LuaCatsParser::castName);
    result_ = result_ && ArgType(builder_, level_ + 1, LuaCatsParser::castModifier);
    result_ = result_ && castTag_3(builder_, level_ + 1);
    result_ = result_ && castTag_4(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // { ',' <<ArgType castModifier>> }*
  private static boolean castTag_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "castTag_3")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!castTag_3_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "castTag_3", pos_)) break;
    }
    return true;
  }

  // ',' <<ArgType castModifier>>
  private static boolean castTag_3_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "castTag_3_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, ",");
    result_ = result_ && ArgType(builder_, level_ + 1, LuaCatsParser::castModifier);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // description?
  private static boolean castTag_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "castTag_4")) return false;
    description(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // '@class' <<ArgKeyword exactKeyword>>? <<ArgType typeName>> [':' parentTypes] description?
  public static boolean classTag(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "classTag")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CLASS_TAG, "<class tag>");
    result_ = consumeToken(builder_, "@class");
    result_ = result_ && classTag_1(builder_, level_ + 1);
    result_ = result_ && ArgType(builder_, level_ + 1, LuaCatsParser::typeName);
    result_ = result_ && classTag_3(builder_, level_ + 1);
    result_ = result_ && classTag_4(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // <<ArgKeyword exactKeyword>>?
  private static boolean classTag_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "classTag_1")) return false;
    ArgKeyword(builder_, level_ + 1, LuaCatsParser::exactKeyword);
    return true;
  }

  // [':' parentTypes]
  private static boolean classTag_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "classTag_3")) return false;
    classTag_3_0(builder_, level_ + 1);
    return true;
  }

  // ':' parentTypes
  private static boolean classTag_3_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "classTag_3_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, ":");
    result_ = result_ && parentTypes(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // description?
  private static boolean classTag_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "classTag_4")) return false;
    description(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // commentLine*
  public static boolean comment(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "comment")) return false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, COMMENT, "<comment>");
    while (true) {
      int pos_ = current_position_(builder_);
      if (!commentLine(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "comment", pos_)) break;
    }
    exit_section_(builder_, level_, marker_, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // DASHES (anyTag | typeOption | description)?
  static boolean commentLine(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "commentLine")) return false;
    if (!nextTokenIs(builder_, DASHES)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = consumeToken(builder_, DASHES);
    pinned_ = result_; // pin = 1
    result_ = result_ && commentLine_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // (anyTag | typeOption | description)?
  private static boolean commentLine_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "commentLine_1")) return false;
    commentLine_1_0(builder_, level_ + 1);
    return true;
  }

  // anyTag | typeOption | description
  private static boolean commentLine_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "commentLine_1_0")) return false;
    boolean result_;
    result_ = anyTag(builder_, level_ + 1);
    if (!result_) result_ = typeOption(builder_, level_ + 1);
    if (!result_) result_ = description(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // '@deprecated' description?
  public static boolean deprecatedTag(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "deprecatedTag")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, DEPRECATED_TAG, "<deprecated tag>");
    result_ = consumeToken(builder_, "@deprecated");
    result_ = result_ && deprecatedTag_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // description?
  private static boolean deprecatedTag_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "deprecatedTag_1")) return false;
    description(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // (NAME | NUMBER | STRING | SYMBOL | TEXT | CODE)+
  public static boolean description(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "description")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, DESCRIPTION, "<description>");
    result_ = description_0(builder_, level_ + 1);
    while (result_) {
      int pos_ = current_position_(builder_);
      if (!description_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "description", pos_)) break;
    }
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // NAME | NUMBER | STRING | SYMBOL | TEXT | CODE
  private static boolean description_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "description_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, NAME);
    if (!result_) result_ = consumeToken(builder_, NUMBER);
    if (!result_) result_ = consumeToken(builder_, STRING);
    if (!result_) result_ = consumeToken(builder_, SYMBOL);
    if (!result_) result_ = consumeToken(builder_, TEXT);
    if (!result_) result_ = consumeToken(builder_, CODE);
    return result_;
  }

  /* ********************************************************** */
  // NAME
  static boolean diagnosticName(PsiBuilder builder_, int level_) {
    return consumeToken(builder_, NAME);
  }

  /* ********************************************************** */
  // 'disable-next-line' | 'disable-line' | 'disable' | 'enable'
  public static boolean diagnosticState(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "diagnosticState")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, DIAGNOSTIC_STATE, "<diagnostic state>");
    result_ = consumeToken(builder_, "disable-next-line");
    if (!result_) result_ = consumeToken(builder_, "disable-line");
    if (!result_) result_ = consumeToken(builder_, "disable");
    if (!result_) result_ = consumeToken(builder_, "enable");
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // '@diagnostic' <<ArgKeyword diagnosticState>> [<<ArgSymbol (':')>> diagnostics] description?
  public static boolean diagnosticTag(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "diagnosticTag")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, DIAGNOSTIC_TAG, "<diagnostic tag>");
    result_ = consumeToken(builder_, "@diagnostic");
    result_ = result_ && ArgKeyword(builder_, level_ + 1, LuaCatsParser::diagnosticState);
    result_ = result_ && diagnosticTag_2(builder_, level_ + 1);
    result_ = result_ && diagnosticTag_3(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // [<<ArgSymbol (':')>> diagnostics]
  private static boolean diagnosticTag_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "diagnosticTag_2")) return false;
    diagnosticTag_2_0(builder_, level_ + 1);
    return true;
  }

  // <<ArgSymbol (':')>> diagnostics
  private static boolean diagnosticTag_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "diagnosticTag_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = ArgSymbol(builder_, level_ + 1, LuaCatsParser::diagnosticTag_2_0_0_0);
    result_ = result_ && diagnostics(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (':')
  private static boolean diagnosticTag_2_0_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "diagnosticTag_2_0_0_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, ":");
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // description?
  private static boolean diagnosticTag_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "diagnosticTag_3")) return false;
    description(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // <<ArgName diagnosticName>> {',' <<ArgName diagnosticName>>}*
  public static boolean diagnostics(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "diagnostics")) return false;
    if (!nextTokenIs(builder_, NAME)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = ArgName(builder_, level_ + 1, LuaCatsParser::diagnosticName);
    result_ = result_ && diagnostics_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, DIAGNOSTICS, result_);
    return result_;
  }

  // {',' <<ArgName diagnosticName>>}*
  private static boolean diagnostics_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "diagnostics_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!diagnostics_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "diagnostics_1", pos_)) break;
    }
    return true;
  }

  // ',' <<ArgName diagnosticName>>
  private static boolean diagnostics_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "diagnostics_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, ",");
    result_ = result_ && ArgName(builder_, level_ + 1, LuaCatsParser::diagnosticName);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // '{' '[' type ']' ':' type '}'
  public static boolean dictionaryType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dictionaryType")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, DICTIONARY_TYPE, "<dictionary type>");
    result_ = consumeToken(builder_, "{");
    result_ = result_ && consumeToken(builder_, "[");
    result_ = result_ && type(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, "]");
    result_ = result_ && consumeToken(builder_, ":");
    result_ = result_ && type(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, "}");
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // tupleType
  //     | dictionaryType
  //     | literalTableType
  //     | functionSignatureType
  //     | parameterizedName
  //     | parameterName
  //     | literalType
  //     | simpleType
  public static boolean distinctType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "distinctType")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, DISTINCT_TYPE, "<distinct type>");
    result_ = tupleType(builder_, level_ + 1);
    if (!result_) result_ = dictionaryType(builder_, level_ + 1);
    if (!result_) result_ = literalTableType(builder_, level_ + 1);
    if (!result_) result_ = functionSignatureType(builder_, level_ + 1);
    if (!result_) result_ = parameterizedName(builder_, level_ + 1);
    if (!result_) result_ = parameterName(builder_, level_ + 1);
    if (!result_) result_ = literalType(builder_, level_ + 1);
    if (!result_) result_ = simpleType(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // '(key)'
  static boolean enumKey(PsiBuilder builder_, int level_) {
    return consumeToken(builder_, "(key)");
  }

  /* ********************************************************** */
  // NAME
  static boolean enumName(PsiBuilder builder_, int level_) {
    return consumeToken(builder_, NAME);
  }
